environment/prod/deployment_env.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitops-demo
spec:
  template:
    spec:
      containers:
        - name: backend
