environment/prod/resource_requests_limits.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitops-demo
spec:
  template:
    spec:
      containers:
        - name: backend
          resources:
            requests:
              cpu: 300m
              memory: 500Mi
